# qafka

./: CMakeLists.txt  README
include/: config_options.h  consumer.h  kafka_client.h  producer.h  qafka_events.h  thread.h
src/: consumer.cpp  kafka_client.cpp  producer.cpp
test/: main.cpp
